[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/enemy2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/enemy1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Explosion1.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 7.83563

[node name="Enemy" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
mode = 3
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Explosion = ExtResource( 4 )

[node name="EnemySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 2 )

[node name="EnemyNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( -9.53674e-07, 0.0624999 )
scale = Vector2( 1.6, 1.3 )

[node name="Explosions" type="Node" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="killed" from="." to="." method="_on_Enemy_killed"]
[connection signal="screen_exited" from="EnemyNotifier" to="." method="_on_EnemyNotifier_screen_exited"]
